# desktop-rs

./: .travis.yml  Cargo.toml  README.md
src/: arch.rs  environment.rs  lib.rs  os_name.rs  test.rs  vendor.rs
