[package]
name = "desktop"
version = "0.1.1"
authors = ["AregevDev <aregevdev@gmail.com>"]
description = "Detects the target platform and it's architecture, vendor and desktop environment"
repository = "https://github.com//AregevDev//desktop-rs"
keywords = ["desktop", "desktop-rs", "os"]
categories = ["os"]
license = "Apache-2.0"
readme = "README.md"

[badges]

[dependencies]

[profile.release]
opt-level = 3
lto = true