[package]
name = "desktop"
version = "1.0.5"
authors = ["AregevDev <aregevdev@gmail.com>"]
description = "Detects the target platform and it's architecture, vendor and desktop environment"
repository = "https://github.com//AregevDev//desktop-rs"
keywords = ["desktop", "desktop-rs", "os"]
categories = ["os"]
documentation = "https://docs.rs/desktop"
license = "Apache-2.0"
readme = "README.md"
editon = "2018"

[dependencies]

[profile.release]
opt-level = 3
lto = true